chore: update EC2 Instance Offerings

--- a/moto/ec2/resources/instance_type_offerings/availability-zone-id/sa-east-1.json
+++ b/moto/ec2/resources/instance_type_offerings/availability-zone-id/sa-east-1.json
@@ -212,6 +212,50 @@
   "Location": "sae1-az1"
  },
  {
+  "InstanceType": "c6a.12xlarge",
+  "Location": "sae1-az1"
+ },
+ {
+  "InstanceType": "c6a.16xlarge",
+  "Location": "sae1-az1"
+ },
+ {
+  "InstanceType": "c6a.24xlarge",
+  "Location": "sae1-az1"
+ },
+ {
+  "InstanceType": "c6a.2xlarge",
+  "Location": "sae1-az1"
+ },
+ {
+  "InstanceType": "c6a.32xlarge",
+  "Location": "sae1-az1"
+ },
+ {
+  "InstanceType": "c6a.48xlarge",
+  "Location": "sae1-az1"
+ },
+ {
+  "InstanceType": "c6a.4xlarge",
+  "Location": "sae1-az1"
+ },
+ {
+  "InstanceType": "c6a.8xlarge",
+  "Location": "sae1-az1"
+ },
+ {
+  "InstanceType": "c6a.large",
+  "Location": "sae1-az1"
+ },
+ {
+  "InstanceType": "c6a.metal",
+  "Location": "sae1-az1"
+ },
+ {
+  "InstanceType": "c6a.xlarge",
+  "Location": "sae1-az1"
+ },
+ {
   "InstanceType": "c6g.12xlarge",
   "Location": "sae1-az1"
  },
@@ -721,6 +765,50 @@
  },
  {
   "InstanceType": "m5zn.xlarge",
+  "Location": "sae1-az1"
+ },
+ {
+  "InstanceType": "m6a.12xlarge",
+  "Location": "sae1-az1"
+ },
+ {
+  "InstanceType": "m6a.16xlarge",
+  "Location": "sae1-az1"
+ },
+ {
+  "InstanceType": "m6a.24xlarge",
+  "Location": "sae1-az1"
+ },
+ {
+  "InstanceType": "m6a.2xlarge",
+  "Location": "sae1-az1"
+ },
+ {
+  "InstanceType": "m6a.32xlarge",
+  "Location": "sae1-az1"
+ },
+ {
+  "InstanceType": "m6a.48xlarge",
+  "Location": "sae1-az1"
+ },
+ {
+  "InstanceType": "m6a.4xlarge",
+  "Location": "sae1-az1"
+ },
+ {
+  "InstanceType": "m6a.8xlarge",
+  "Location": "sae1-az1"
+ },
+ {
+  "InstanceType": "m6a.large",
+  "Location": "sae1-az1"
+ },
+ {
+  "InstanceType": "m6a.metal",
+  "Location": "sae1-az1"
+ },
+ {
+  "InstanceType": "m6a.xlarge",
   "Location": "sae1-az1"
  },
  {
@@ -2608,6 +2696,50 @@
   "Location": "sae1-az3"
  },
  {
+  "InstanceType": "c6a.12xlarge",
+  "Location": "sae1-az3"
+ },
+ {
+  "InstanceType": "c6a.16xlarge",
+  "Location": "sae1-az3"
+ },
+ {
+  "InstanceType": "c6a.24xlarge",
+  "Location": "sae1-az3"
+ },
+ {
+  "InstanceType": "c6a.2xlarge",
+  "Location": "sae1-az3"
+ },
+ {
+  "InstanceType": "c6a.32xlarge",
+  "Location": "sae1-az3"
+ },
+ {
+  "InstanceType": "c6a.48xlarge",
+  "Location": "sae1-az3"
+ },
+ {
+  "InstanceType": "c6a.4xlarge",
+  "Location": "sae1-az3"
+ },
+ {
+  "InstanceType": "c6a.8xlarge",
+  "Location": "sae1-az3"
+ },
+ {
+  "InstanceType": "c6a.large",
+  "Location": "sae1-az3"
+ },
+ {
+  "InstanceType": "c6a.metal",
+  "Location": "sae1-az3"
+ },
+ {
+  "InstanceType": "c6a.xlarge",
+  "Location": "sae1-az3"
+ },
+ {
   "InstanceType": "c6g.12xlarge",
   "Location": "sae1-az3"
  },
@@ -3061,6 +3193,50 @@
  },
  {
   "InstanceType": "m5d.xlarge",
+  "Location": "sae1-az3"
+ },
+ {
+  "InstanceType": "m6a.12xlarge",
+  "Location": "sae1-az3"
+ },
+ {
+  "InstanceType": "m6a.16xlarge",
+  "Location": "sae1-az3"
+ },
+ {
+  "InstanceType": "m6a.24xlarge",
+  "Location": "sae1-az3"
+ },
+ {
+  "InstanceType": "m6a.2xlarge",
+  "Location": "sae1-az3"
+ },
+ {
+  "InstanceType": "m6a.32xlarge",
+  "Location": "sae1-az3"
+ },
+ {
+  "InstanceType": "m6a.48xlarge",
+  "Location": "sae1-az3"
+ },
+ {
+  "InstanceType": "m6a.4xlarge",
+  "Location": "sae1-az3"
+ },
+ {
+  "InstanceType": "m6a.8xlarge",
+  "Location": "sae1-az3"
+ },
+ {
+  "InstanceType": "m6a.large",
+  "Location": "sae1-az3"
+ },
+ {
+  "InstanceType": "m6a.metal",
+  "Location": "sae1-az3"
+ },
+ {
+  "InstanceType": "m6a.xlarge",
   "Location": "sae1-az3"
  },
  {
