--- a/moto/ec2/resources/instance_type_offerings/availability-zone/us-east-1.json
+++ b/moto/ec2/resources/instance_type_offerings/availability-zone/us-east-1.json
@@ -9348,6 +9348,14 @@
   "Location": "us-east-1d"
  },
  {
+  "InstanceType": "trn1.2xlarge",
+  "Location": "us-east-1d"
+ },
+ {
+  "InstanceType": "trn1.32xlarge",
+  "Location": "us-east-1d"
+ },
+ {
   "InstanceType": "u-12tb1.112xlarge",
   "Location": "us-east-1d"
  },
