--- a/moto/ec2/resources/instance_type_offerings/region/sa-east-1.json
+++ b/moto/ec2/resources/instance_type_offerings/region/sa-east-1.json
@@ -212,6 +212,50 @@
   "Location": "sa-east-1"
  },
  {
+  "InstanceType": "c6a.12xlarge",
+  "Location": "sa-east-1"
+ },
+ {
+  "InstanceType": "c6a.16xlarge",
+  "Location": "sa-east-1"
+ },
+ {
+  "InstanceType": "c6a.24xlarge",
+  "Location": "sa-east-1"
+ },
+ {
+  "InstanceType": "c6a.2xlarge",
+  "Location": "sa-east-1"
+ },
+ {
+  "InstanceType": "c6a.32xlarge",
+  "Location": "sa-east-1"
+ },
+ {
+  "InstanceType": "c6a.48xlarge",
+  "Location": "sa-east-1"
+ },
+ {
+  "InstanceType": "c6a.4xlarge",
+  "Location": "sa-east-1"
+ },
+ {
+  "InstanceType": "c6a.8xlarge",
+  "Location": "sa-east-1"
+ },
+ {
+  "InstanceType": "c6a.large",
+  "Location": "sa-east-1"
+ },
+ {
+  "InstanceType": "c6a.metal",
+  "Location": "sa-east-1"
+ },
+ {
+  "InstanceType": "c6a.xlarge",
+  "Location": "sa-east-1"
+ },
+ {
   "InstanceType": "c6g.12xlarge",
   "Location": "sa-east-1"
  },
@@ -721,6 +765,50 @@
  },
  {
   "InstanceType": "m5zn.xlarge",
+  "Location": "sa-east-1"
+ },
+ {
+  "InstanceType": "m6a.12xlarge",
+  "Location": "sa-east-1"
+ },
+ {
+  "InstanceType": "m6a.16xlarge",
+  "Location": "sa-east-1"
+ },
+ {
+  "InstanceType": "m6a.24xlarge",
+  "Location": "sa-east-1"
+ },
+ {
+  "InstanceType": "m6a.2xlarge",
+  "Location": "sa-east-1"
+ },
+ {
+  "InstanceType": "m6a.32xlarge",
+  "Location": "sa-east-1"
+ },
+ {
+  "InstanceType": "m6a.48xlarge",
+  "Location": "sa-east-1"
+ },
+ {
+  "InstanceType": "m6a.4xlarge",
+  "Location": "sa-east-1"
+ },
+ {
+  "InstanceType": "m6a.8xlarge",
+  "Location": "sa-east-1"
+ },
+ {
+  "InstanceType": "m6a.large",
+  "Location": "sa-east-1"
+ },
+ {
+  "InstanceType": "m6a.metal",
+  "Location": "sa-east-1"
+ },
+ {
+  "InstanceType": "m6a.xlarge",
   "Location": "sa-east-1"
  },
  {
