S3: select_object_content() (Experimental)

--- a/setup.cfg
+++ b/setup.cfg
@@ -52,6 +52,7 @@ all =
     openapi-spec-validator>=0.2.8
     pyparsing>=3.0.7
     jsondiff>=1.1.2
+    py-partiql-parser==0.1.0
     aws-xray-sdk!=0.96,>=0.93
     setuptools
 server =
@@ -65,6 +66,7 @@ server =
     openapi-spec-validator>=0.2.8
     pyparsing>=3.0.7
     jsondiff>=1.1.2
+    py-partiql-parser==0.1.0
     aws-xray-sdk!=0.96,>=0.93
     setuptools
     flask!=2.2.0,!=2.2.1
@@ -98,6 +100,7 @@ cloudformation =
     openapi-spec-validator>=0.2.8
     pyparsing>=3.0.7
     jsondiff>=1.1.2
+    py-partiql-parser==0.1.0
     aws-xray-sdk!=0.96,>=0.93
     setuptools
 cloudfront =
@@ -174,7 +177,9 @@ resourcegroups =
 resourcegroupstaggingapi =
 route53 =
 route53resolver = sshpubkeys>=3.1.0
-s3 = PyYAML>=5.1
+s3 =
+    PyYAML>=5.1
+    py-partiql-parser==0.1.0
 s3control =
 sagemaker =
 sdb =
