--- a/.github/workflows/tests_sdk_dotnet.yml
+++ b/.github/workflows/tests_sdk_dotnet.yml
@@ -1,4 +1,4 @@
-name: Java SDK test
+name: .NET SDK test
 on: [workflow_call]
 
 jobs:
@@ -19,12 +19,17 @@ jobs:
         python -m build
         docker run --rm -t --name motoserver -e TEST_SERVER_MODE=true -e AWS_SECRET_ACCESS_KEY=server_secret -e AWS_ACCESS_KEY_ID=server_key -v `pwd`:/moto -p 5000:5000 -v /var/run/docker.sock:/var/run/docker.sock python:3.7-buster /moto/scripts/ci_moto_server.sh &
         python scripts/ci_wait_for_server.py
-    - uses: actions/setup-java@v3
+    - uses: actions/setup-dotnet@v3
+    - uses: actions/cache@v3
       with:
-        distribution: 'temurin'
-        java-version: '17'
-        cache: 'maven'
-    - name: Build with Maven
+        path: ~/.nuget/packages
+        # Look to see if there is a cache hit for the corresponding requirements file
+        key: ${{ runner.os }}-nuget
+        restore-keys: |
+          ${{ runner.os }}-nuget
+    - name: Install dependencies
+      run: cd other_langs/tests_dotnet && dotnet restore ExampleTestProject/
+    - name: Run tests
       run: |
         mkdir ~/.aws && touch ~/.aws/credentials && echo -e "[default]\naws_access_key_id = test\naws_secret_access_key = test" > ~/.aws/credentials
-        cd other_langs/tests_java && mvn test
+        cd other_langs/tests_dotnet && dotnet test ExampleTestProject/
