--- a/moto/ec2/resources/instance_type_offerings/region/us-east-2.json
+++ b/moto/ec2/resources/instance_type_offerings/region/us-east-2.json
@@ -468,6 +468,10 @@
   "Location": "us-east-2"
  },
  {
+  "InstanceType": "c6in.metal",
+  "Location": "us-east-2"
+ },
+ {
   "InstanceType": "c6in.xlarge",
   "Location": "us-east-2"
  },
@@ -1288,6 +1292,10 @@
   "Location": "us-east-2"
  },
  {
+  "InstanceType": "m6idn.metal",
+  "Location": "us-east-2"
+ },
+ {
   "InstanceType": "m6idn.xlarge",
   "Location": "us-east-2"
  },
@@ -1321,6 +1329,10 @@
  },
  {
   "InstanceType": "m6in.large",
+  "Location": "us-east-2"
+ },
+ {
+  "InstanceType": "m6in.metal",
   "Location": "us-east-2"
  },
  {
@@ -1916,6 +1928,10 @@
   "Location": "us-east-2"
  },
  {
+  "InstanceType": "r6idn.metal",
+  "Location": "us-east-2"
+ },
+ {
   "InstanceType": "r6idn.xlarge",
   "Location": "us-east-2"
  },
@@ -1949,6 +1965,10 @@
  },
  {
   "InstanceType": "r6in.large",
+  "Location": "us-east-2"
+ },
+ {
+  "InstanceType": "r6in.metal",
   "Location": "us-east-2"
  },
  {
