--- a/moto/ec2/resources/instance_type_offerings/availability-zone/ap-southeast-1.json
+++ b/moto/ec2/resources/instance_type_offerings/availability-zone/ap-southeast-1.json
@@ -456,6 +456,10 @@
   "Location": "ap-southeast-1a"
  },
  {
+  "InstanceType": "c6in.metal",
+  "Location": "ap-southeast-1a"
+ },
+ {
   "InstanceType": "c6in.xlarge",
   "Location": "ap-southeast-1a"
  },
@@ -1228,6 +1232,10 @@
   "Location": "ap-southeast-1a"
  },
  {
+  "InstanceType": "m6idn.metal",
+  "Location": "ap-southeast-1a"
+ },
+ {
   "InstanceType": "m6idn.xlarge",
   "Location": "ap-southeast-1a"
  },
@@ -1261,6 +1269,10 @@
  },
  {
   "InstanceType": "m6in.large",
+  "Location": "ap-southeast-1a"
+ },
+ {
+  "InstanceType": "m6in.metal",
   "Location": "ap-southeast-1a"
  },
  {
@@ -1732,6 +1744,10 @@
   "Location": "ap-southeast-1a"
  },
  {
+  "InstanceType": "r6idn.metal",
+  "Location": "ap-southeast-1a"
+ },
+ {
   "InstanceType": "r6idn.xlarge",
   "Location": "ap-southeast-1a"
  },
@@ -1765,6 +1781,10 @@
  },
  {
   "InstanceType": "r6in.large",
+  "Location": "ap-southeast-1a"
+ },
+ {
+  "InstanceType": "r6in.metal",
   "Location": "ap-southeast-1a"
  },
  {
@@ -2432,6 +2452,10 @@
   "Location": "ap-southeast-1b"
  },
  {
+  "InstanceType": "c6in.metal",
+  "Location": "ap-southeast-1b"
+ },
+ {
   "InstanceType": "c6in.xlarge",
   "Location": "ap-southeast-1b"
  },
@@ -3204,6 +3228,10 @@
   "Location": "ap-southeast-1b"
  },
  {
+  "InstanceType": "m6idn.metal",
+  "Location": "ap-southeast-1b"
+ },
+ {
   "InstanceType": "m6idn.xlarge",
   "Location": "ap-southeast-1b"
  },
@@ -3237,6 +3265,10 @@
  },
  {
   "InstanceType": "m6in.large",
+  "Location": "ap-southeast-1b"
+ },
+ {
+  "InstanceType": "m6in.metal",
   "Location": "ap-southeast-1b"
  },
  {
@@ -3708,6 +3740,10 @@
   "Location": "ap-southeast-1b"
  },
  {
+  "InstanceType": "r6idn.metal",
+  "Location": "ap-southeast-1b"
+ },
+ {
   "InstanceType": "r6idn.xlarge",
   "Location": "ap-southeast-1b"
  },
@@ -3741,6 +3777,10 @@
  },
  {
   "InstanceType": "r6in.large",
+  "Location": "ap-southeast-1b"
+ },
+ {
+  "InstanceType": "r6in.metal",
   "Location": "ap-southeast-1b"
  },
  {
