--- a/moto/ec2/resources/instance_type_offerings/region/ap-northeast-1.json
+++ b/moto/ec2/resources/instance_type_offerings/region/ap-northeast-1.json
@@ -464,6 +464,10 @@
   "Location": "ap-northeast-1"
  },
  {
+  "InstanceType": "c6in.metal",
+  "Location": "ap-northeast-1"
+ },
+ {
   "InstanceType": "c6in.xlarge",
   "Location": "ap-northeast-1"
  },
@@ -1368,6 +1372,10 @@
   "Location": "ap-northeast-1"
  },
  {
+  "InstanceType": "m6idn.metal",
+  "Location": "ap-northeast-1"
+ },
+ {
   "InstanceType": "m6idn.xlarge",
   "Location": "ap-northeast-1"
  },
@@ -1401,6 +1409,10 @@
  },
  {
   "InstanceType": "m6in.large",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "m6in.metal",
   "Location": "ap-northeast-1"
  },
  {
@@ -1916,6 +1928,10 @@
   "Location": "ap-northeast-1"
  },
  {
+  "InstanceType": "r6idn.metal",
+  "Location": "ap-northeast-1"
+ },
+ {
   "InstanceType": "r6idn.xlarge",
   "Location": "ap-northeast-1"
  },
@@ -1949,6 +1965,10 @@
  },
  {
   "InstanceType": "r6in.large",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "r6in.metal",
   "Location": "ap-northeast-1"
  },
  {
