--- a/moto/ec2/resources/instance_type_offerings/region/us-east-1.json
+++ b/moto/ec2/resources/instance_type_offerings/region/us-east-1.json
@@ -496,6 +496,10 @@
   "Location": "us-east-1"
  },
  {
+  "InstanceType": "c6in.metal",
+  "Location": "us-east-1"
+ },
+ {
   "InstanceType": "c6in.xlarge",
   "Location": "us-east-1"
  },
@@ -1456,6 +1460,10 @@
   "Location": "us-east-1"
  },
  {
+  "InstanceType": "m6idn.metal",
+  "Location": "us-east-1"
+ },
+ {
   "InstanceType": "m6idn.xlarge",
   "Location": "us-east-1"
  },
@@ -1489,6 +1497,10 @@
  },
  {
   "InstanceType": "m6in.large",
+  "Location": "us-east-1"
+ },
+ {
+  "InstanceType": "m6in.metal",
   "Location": "us-east-1"
  },
  {
@@ -2088,6 +2100,10 @@
   "Location": "us-east-1"
  },
  {
+  "InstanceType": "r6idn.metal",
+  "Location": "us-east-1"
+ },
+ {
   "InstanceType": "r6idn.xlarge",
   "Location": "us-east-1"
  },
@@ -2121,6 +2137,10 @@
  },
  {
   "InstanceType": "r6in.large",
+  "Location": "us-east-1"
+ },
+ {
+  "InstanceType": "r6in.metal",
   "Location": "us-east-1"
  },
  {
